@@ -25,6 +25,8 @@ Deprecations:
 
   * [MESOS-5955] - Health check binary "mesos-health-check" is removed.
 
+  * [MESOS-6110] - Updated HealthCheck protobuf message for backwards compatibility.
+
 
 Release Notes - Mesos - Version 1.0.2
 --------------------------------------------
